--- a/src/LorrisAnalyzer/DataWidgets/GraphWidget/graphexport.ui
+++ b/src/LorrisAnalyzer/DataWidgets/GraphWidget/graphexport.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>660</width>
-    <height>409</height>
+    <height>408</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -96,7 +96,16 @@
         <property name="spacing">
          <number>6</number>
         </property>
-        <property name="margin">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
          <number>0</number>
         </property>
         <item>
@@ -288,7 +297,7 @@
                  <x>0</x>
                  <y>0</y>
                  <width>157</width>
-                 <height>193</height>
+                 <height>184</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_5">
