--- a/src/LorrisProgrammer/ui/shupitospitunnelwidget.ui
+++ b/src/LorrisProgrammer/ui/shupitospitunnelwidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>654</width>
-    <height>370</height>
+    <height>369</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -76,7 +76,7 @@
          <bool>true</bool>
         </property>
         <attribute name="buttonGroup">
-         <string>buttonGroup</string>
+         <string notr="true">buttonGroup</string>
         </attribute>
        </widget>
       </item>
@@ -86,7 +86,7 @@
          <string>Sample on trailing edge</string>
         </property>
         <attribute name="buttonGroup">
-         <string>buttonGroup</string>
+         <string notr="true">buttonGroup</string>
         </attribute>
        </widget>
       </item>
@@ -106,7 +106,7 @@
          <bool>true</bool>
         </property>
         <attribute name="buttonGroup">
-         <string>buttonGroup_2</string>
+         <string notr="true">buttonGroup_2</string>
         </attribute>
        </widget>
       </item>
@@ -116,7 +116,7 @@
          <string>Little endian</string>
         </property>
         <attribute name="buttonGroup">
-         <string>buttonGroup_2</string>
+         <string notr="true">buttonGroup_2</string>
         </attribute>
        </widget>
       </item>
@@ -136,7 +136,7 @@
          <bool>true</bool>
         </property>
         <attribute name="buttonGroup">
-         <string>buttonGroup_4</string>
+         <string notr="true">buttonGroup_4</string>
         </attribute>
        </widget>
       </item>
@@ -146,7 +146,7 @@
          <string>Set slave select low</string>
         </property>
         <attribute name="buttonGroup">
-         <string>buttonGroup_4</string>
+         <string notr="true">buttonGroup_4</string>
         </attribute>
        </widget>
       </item>
@@ -166,7 +166,7 @@
          <bool>true</bool>
         </property>
         <attribute name="buttonGroup">
-         <string>buttonGroup_3</string>
+         <string notr="true">buttonGroup_3</string>
         </attribute>
        </widget>
       </item>
@@ -176,7 +176,7 @@
          <string>Set slave select low</string>
         </property>
         <attribute name="buttonGroup">
-         <string>buttonGroup_3</string>
+         <string notr="true">buttonGroup_3</string>
         </attribute>
        </widget>
       </item>
